Navigation for language browser

--- a/docs/resources/styles/overviews.css
+++ b/docs/resources/styles/overviews.css
@@ -8,7 +8,6 @@ body {
   padding: 0;
   height: 100vh;
   overflow: hidden;
-  box-sizing: content-box;
 }
 
 header {
@@ -19,11 +18,17 @@ header {
   color: white;
   padding: 10px;
   font-family: sans-serif;
-  position: fixed;
+  box-sizing: border-box;
   width: 100%;
-  height: 30px;
+  position: fixed;
+  height: 50px;
   top: 0;
   left: 0;
+}
+
+header a {
+  color: white;
+  text-decoration: none;
 }
 
 main {
